--- a/Updated-Mods/1.1.md
+++ b/Updated-Mods/1.1.md
@@ -12,7 +12,7 @@ BloodMagic-1.7.10-1.3.3-4<br>
 Botania r1.6-198<br>
 buildcraft-7.0.13<br>
 Carpenter's Blocks v3.3.7 DEV - MC 1.7.10<br>
-Chisel2-2.4.0.38<br>
+Chisel2-2.4.1.40<br>
 CodeChickenCore-1.7.10-1.0.7.46<br>
 dark_menagerie-1.7.10-beta-3.1a<br>
 ElectroMagicTools-1.7.10-2.0.0-CUSTOM_V4.1<br>
@@ -26,7 +26,8 @@ Forbidden Magic-1.7.10-0.57<br>
 forestry_1.7.10-3.6.2.19<br>
 gendustry-1.5.2.107-mc1.7.10<br>
 Guide-API-1.7.10-1.0.1-20<br>
-industrialcraft-2-2.2.742-experimental<br>
+industrialcraft-2-2.2.744-experimental<br>
+magicbees-1.7.10-2.3.2<br>
 Mekanism-1.7.10-8.1.5.246<br>
 MekanismGenerators-1.7.10-8.1.5.246<br>
 MekanismTools-1.7.10-8.1.5.246<br>
@@ -49,6 +50,7 @@ ProjectRed-1.7.10-4.7.0pre4.88-World<br>
 Sanguimancy-1.7.10-1.1.9-31<br>
 ThaumcraftGates-1.4.1<br>
 thaumcraftneiplugin-1.7.10-1.7a<br>
+thaumicenergistics-0.8.10.6<br>
 ThaumicExploration-1.7.10-1.1-52<br>
 ThaumicTinkerer-2.5-1.7.10-507<br>
 Translocator-1.7.10-1.1.2.15<br>
