--- a/Updated-Mods/1.1.md
+++ b/Updated-Mods/1.1.md
@@ -14,6 +14,7 @@ buildcraft-7.0.13<br>
 Carpenter's Blocks v3.3.7 DEV - MC 1.7.10<br>
 Chisel2-2.4.1.40<br>
 CodeChickenCore-1.7.10-1.0.7.46<br>
+CoFHCore-[1.7.10]3.0.3B1-291<br>
 dark_menagerie-1.7.10-beta-3.1a<br>
 ElectroMagicTools-1.7.10-2.0.0-CUSTOM_V4.1<br>
 Enchiridion 2-1.7.10-2.0.2a<br>
@@ -47,11 +48,14 @@ ProjectRed-1.7.10-4.7.0pre4.88-Compat<br>
 ProjectRed-1.7.10-4.7.0pre4.88-Integration<br>
 ProjectRed-1.7.10-4.7.0pre4.88-Lighting<br>
 ProjectRed-1.7.10-4.7.0pre4.88-World<br>
+RedstoneArsenal-[1.7.10]1.1.1B1-85<br>
 Sanguimancy-1.7.10-1.1.9-31<br>
 ThaumcraftGates-1.4.1<br>
 thaumcraftneiplugin-1.7.10-1.7a<br>
 thaumicenergistics-0.8.10.6<br>
 ThaumicExploration-1.7.10-1.1-52<br>
 ThaumicTinkerer-2.5-1.7.10-507<br>
+ThermalExpansion-[1.7.10]4.0.2B1-208<br>
+ThermalFoundation-[1.7.10]1.2.0B1-95<br>
 Translocator-1.7.10-1.1.2.15<br>
 Wawla-1.3.1-1.7.10
